Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84015

QFile::moveToTrash() does not accept relative path on Windows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.1
    • 5.15.0 Beta4
    • Core: I/O
    • None
    • Windows 10
    • Windows
    • a033c23ddffed6b9bff3e7be68d513a7962c3b5e (qt/qtbase/dev) 40c571cd727cf0eb8523dc063030fa6cad57c8a3 (qt/qtbase/5.15)

      QFile::moveToTrash(path) works with absolute path but not with relative path on Windows.

      #include <QDebug>
      #include <QFile>
      
      int main()
      {
          QString fn = "aaa.txt";
          {
              QFile f(fn);
              f.open(QFile::WriteOnly);
          }
          qDebug() << QFile::moveToTrash(fn);
      }
      

      This outputs false but when absolute path is used, the same code outputs true.

        For Gerrit Dashboard: QTBUG-84015
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            vladimir.kraus Vladimir Kraus
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes